@@ -92,9 +92,9 @@ public final class Max extends FunctionInterface {
                 double max = (value1 > value2) ? value1 : value2;
 
                 if (a instanceof Double || b instanceof Double)
-                    return new Double(max);
+                    return Double.valueOf(max);
                 else
-                    return new Integer((int) max);
+                    return Integer.valueOf((int) max);
                 
             }
         }
@@ -105,9 +105,9 @@ public final class Max extends FunctionInterface {
 //        Object a = sdf.parse("2017-11-10");
         Object a = Math.PI;
 //        Object b = sdf.parse("2015-11-10");
-        Object b = new Integer(3);
+        Object b = Integer.valueOf(3);
 //        Object c = sdf.parse("2019-10-11");
-        Object c = new Integer(5);
+        Object c = Integer.valueOf(5);
         
         List<Object> l = new ArrayList<Object>();
         l.add(a);
