@@ -99,13 +99,13 @@ public class SumMessage extends FunctionInterface {
 	        	}
 		      }
 		      if (sumType.equals("int")) {
-		        return new Integer( (int) sum);
+		        return Integer.valueOf( (int) sum);
 		      } else if (sumType.equals("money")) {
 		        return new Money(sum);
 		      } else if (sumType.equals("percentage")) {
 		        return new Percentage(sum);
 		      } else {
-		        return new Double(sum);
+		        return Double.valueOf(sum);
 		      }
 		    
 	}
